fixes issue with button spacing

--- a/burger-app/src/components/App.css
+++ b/burger-app/src/components/App.css
@@ -8,15 +8,16 @@
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   cursor: pointer;
   background-color: #bf8653;
-  color: brown;
+  color: black;
 }
 
 .add-ingredient-button {
   padding: 5px;
   background-color: #fae29c;
-  color: brown;
+  color: black;
   border: 1px solid brown;
   cursor: pointer;
+  margin-left: 20px;
 }
 
 .delete-ingredient-button {
@@ -27,7 +28,11 @@
 .submit-button {
   padding: 5px;
   background-color: #fae29c;
-  color: brown;
+  color: black;
   border: 1px solid brown;
   cursor: pointer;
+}
+
+body {
+  background-color: #fae29c;
 }
